--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,15 @@ body.black a {color: black;}
 }
 #myCanvas {
     position: fixed;
-    z-index: -1;
+    z-index: 1;
     background: #0000ee;
     height: 100vh;
     width: 100vw;
+    animation-delay: 1s; 
+    animation-duration: 0.3s; 
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
 }
 
 /* FONT SIZES */
