--- a/css/style.css
+++ b/css/style.css
@@ -50,12 +50,14 @@ body.black a {color: black;}
     background: #0000ee;
     height: 100vh;
     width: 100vw;
+    animation-name: fadeout;
     animation-delay: 1s; 
     animation-duration: 0.3s; 
     animation-iteration-count: 1;
     animation-timing-function: ease-in-out;
     animation-fill-mode: forwards;
 }
+
 
 /* FONT SIZES */
 body, .small {font-size: 1.5vw; line-height: 1.25;}
